@@ -3,6 +3,10 @@ Version 18   Live Server Fixes
 --Gun price up to 1200 to strengthen Pit Bulls somewhat, and Powered Door price
   down to 600 to compensate for door drawbacks.
 
+--Chills are now put on all houses player entered in the last hour when player
+  dies, regardless of where player dies.  Player is haunted by what they did
+  during the last hour of their past life.
+
 
 
 
